Update dependencies, add home link to navigation, fix footer spacing, added new skills, fixed spacing on about page.

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -9,7 +9,7 @@
   }
 
   h3 {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
 
   h5 {
